# ohte-harjoitustyo

./: .env  .env.test  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: coverage_report.yml
dokumentaatio/: arkkitehtuuri.md  changelog.md  kaytto-ohje.md  testausdokumentti.md  tuntikirjanpito.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko3/: t1.md  t2.md  t3.md  t4.md
src/: build.py  config.py  database_connection.py  index.py  initialize_database.py
src/entities/: __init__.py  course.py  database.py  file_manager.py  scheduler.py
src/lib/: __init__.py  database.py
src/repositories/: __init__.py  course_repository.py
src/services/: __init__.py  export_service.py  file_manager_service.py  import_service.py  planner_service.py  scheduler_service.py
src/tests/: test_initialize_database.py
src/tests/data/: sample.json  sample_corrupted.json  sample_keyerror.json  sample_realistic.json  sample_typeerror.json
src/tests/entities/: course_test.py  test_course.py  test_database.py  test_file_manager.py  test_scheduler.py
src/tests/lib/: test_database.py
src/tests/repositories/: test_course_repository.py
src/tests/services/: test_export_service.py  test_file_manager_service.py  test_import_service.py  (+2 more)
src/ui/: calculation_view.py  create_course_view.py  schedule_view.py  ui.py  view.py
study-planner/: pyproject.toml
study-planner/dokumentaatio/: changelog.md  tyoaikakirjanpito.md
study-planner/src/: initialize_database.py
(+6 files in other folders)
